# IntraMap

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-24-intramap.md  2026-05-25-icons-and-manual-hosts.md  2026-05-25-render-improvements.md  2026-05-26-ci-workflow.md  2026-05-26-cli-report-export.md
docs/superpowers/specs/: 2026-05-24-intramap-design.md  2026-05-25-icons-and-manual-hosts-design.md  2026-05-25-render-improvements-design.md  2026-05-26-canvas-search-design.md  2026-05-26-ci-workflow-design.md  2026-05-26-cli-report-export-design.md  2026-05-26-diagnostics-design.md  2026-05-26-i18n-design.md  2026-05-26-ip-validation-design.md  2026-05-26-mermaid-html-export-design.md  (+4 more)
intramap/: __main__.py  cli.py  diagnostics.py  i18n.py  inventory.py  models.py  path_report.py  scan_diff.py  scanner.py  wiring_report.py
intramap/gui/: __init__.py  app.py  assets.py  canvas.py  device_dialog.py  device_list_dialog.py  diagnose_dialog.py  edge.py  export_dialog.py  group.py  i18n.py  inspector.py  layout.py  link_dialog.py  main_window.py  node.py  path_report_dialog.py  scan_worker.py  switch_dialog.py
intramap/renderers/: _common.py  graphviz.py  html.py  icons.py  mermaid.py  plantuml.py
tests/: conftest.py  test_cli.py  test_diagnostics.py  test_gui.py  test_i18n.py  test_inventory.py  test_layout.py  test_models.py  test_path_report.py  test_renderers.py  test_renderers_export.py  test_scan_diff.py  test_scanner.py  test_wiring_report.py
tools/: make_icons.py  make_outlet_png.py
(+1 files in other folders)
